# stelion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENTS.md  README.md  environment.yml  pyproject.toml  stelion.code-workspace
.github/workflows/: ci.yml  publish-noarch.yml
conda.recipe/: meta.yaml
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md
docs/api/: index.md
docs/audits/: adversarial-review-prompt.md  audit-component.md  audit-interaction.md  audit-model.md
docs/guide/: bulk-operations.md  cli-reference.md  comparison.md  getting-started.md  installation.md  integration-policy.md  submodule-sync.md  usage.md
src/stelion/: __init__.py  __main__.py  __version__.py  cli.py
src/stelion/data/: __init__.py
src/stelion/data/audits/: __init__.py  audit-architecture.md  audit-documentation.md
src/stelion/data/references/: __init__.py  names.md
src/stelion/data/standards/: __init__.py  design-principles.md  integration-policy.md  writing-standards.md
src/stelion/data/vscode/: __init__.py  extensions.json  settings.json
src/stelion/workspace/: __init__.py  composition.py  exceptions.py
src/stelion/workspace/adapters/: __init__.py  _cli_common.py  bulk_commands.py  commands.py  comparison_commands.py  submodule_commands.py
src/stelion/workspace/application/: __init__.py  bootstrap.py  bulk.py  comparison.py  discovery.py  environment.py  generation.py  graph.py  manifest_init.py  protocols.py  registration.py  sync.py
src/stelion/workspace/domain/: __init__.py  bulk.py  comparison.py  dependency.py  environment.py  manifest.py  project.py  status.py  sync.py
src/stelion/workspace/infrastructure/: __init__.py  bootstrap_git.py  bulk_operations.py  command_runner.py  data_loader.py  dependency_scanners.py  environment_parser.py  file_ops.py  git_operations.py  gitmodules_parser.py  manifest_codec.py  manifest_loader.py  pyproject_parser.py  spec_loader.py  structured_parsers.py  template_engine.py  tree_scanner.py
src/stelion/workspace/infrastructure/renderers/: __init__.py  comparison.py  markdown.py  vscode.py  yaml.py
tests/: conftest.py
tests/test_stelion/: test_architecture_fixes.py  test_comparison.py
