# ==================================================================================================
# Pyproject Configuration for Stelion Package
# ==================================================================================================

# --- Build System Requirements --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


# --- Package Metadata -----------------------------------------------------------------------------

[project]
name = "stelion"
version = "0.0.0"
authors = [{name = "Esther Poniatowski", email = "esther.poniatowski@ens.psl.eu"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Repository synchronization framework for combining cross-project consistency with project-specific adjustments through configurable mappings, diff-based comparisons, and template-based substitution"
keywords = ["template", "diff", "synchronization", "repository-management", "merging-conflict", "placeholder-substitution"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
urls = {homepage = "https://github.com/esther-poniatowski/stelion"}


# --- Dependencies ---------------------------------------------------------------------------------

requires-python = ">=3.12"

dependencies = [
    "pyyaml",            # YAML configuration parsing
    "typer",             # CLI interface
    "rich",              # Improved CLI output formatting
]


# --- Package Source Code --------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- CLI Entry Points -----------------------------------------------------------------------------

[project.scripts]
stelion = "stelion.cli:main"


# --- Versioning -----------------------------------------------------------------------------------

[tool.semantic_release]
branch = "main"

version_toml = [
	"pyproject.toml:project.version",
	"CITATION.cff:version"
]
version_variables = ["src/stelion/__version__.py:__version__"]

commit_parser = "angular"
major_versions = ["BREAKING CHANGE"]
minor_versions = ["feat"]
patch_versions = ["fix", "perf", "refactor"]

tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "docs/CHANGELOG.md"
